// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Nav when no pageId should render section link 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  position: relative;
  bottom: -1px;
}

.c1 {
  font-size: 1em;
  font-weight: bold;
  color: #c3c3c3;
  padding: 0.3em 2em;
  border: 1px solid #666;
  border-bottom: none;
  background-color: #666;
  text-decoration: none;
  border-radius: 4px 4px 0 0;
  margin: 0 0.25em 0 0;
}

.c1[aria-current="true"] {
  background: #FFFFFF;
  color: #5F7682;
  border: 1px solid #c3c3c3;
  border-bottom: none;
}

.c2 {
  background: #FFFFFF;
  border: 1px solid #c3c3c3;
  border-radius: 4px;
}

<UnwrappedTabs
  match={
    Object {
      "params": Object {
        "pageId": "",
        "questionnaireId": "123",
        "sectionId": "888",
      },
    }
  }
>
  <div>
    <Tabs__TabsContainer>
      <nav
        className="c0"
      >
        <Tabs__Tab
          to="/questionnaire/123/888/design"
        >
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="c1"
            to="/questionnaire/123/888/design"
          >
            <Route
              path="/questionnaire/123/888/design"
            >
              <Link
                aria-current={false}
                className="c1"
                replace={false}
                to="/questionnaire/123/888/design"
              >
                <a
                  aria-current={false}
                  className="c1"
                  href="/questionnaire/123/888/design"
                  onClick={[Function]}
                >
                  Builder
                </a>
              </Link>
            </Route>
          </NavLink>
        </Tabs__Tab>
        <Tabs__Tab
          activeClassName="selected"
          isActive={[Function]}
          to="/questionnaire/1/routing/2/3"
        >
          <NavLink
            activeClassName="selected"
            ariaCurrent="true"
            className="c1"
            isActive={[Function]}
            to="/questionnaire/1/routing/2/3"
          >
            <Route
              path="/questionnaire/1/routing/2/3"
            >
              <Link
                aria-current="true"
                className="c1 selected"
                replace={false}
                style={Object {}}
                to="/questionnaire/1/routing/2/3"
              >
                <a
                  aria-current="true"
                  className="c1 selected"
                  href="/questionnaire/1/routing/2/3"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Routing
                </a>
              </Link>
            </Route>
          </NavLink>
        </Tabs__Tab>
      </nav>
    </Tabs__TabsContainer>
    <Tabs__TabsBody>
      <div
        className="c2"
      >
        Tab Content
      </div>
    </Tabs__TabsBody>
  </div>
</UnwrappedTabs>
`;

exports[`components/Nav when pageId present should render page link 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  position: relative;
  bottom: -1px;
}

.c1 {
  font-size: 1em;
  font-weight: bold;
  color: #c3c3c3;
  padding: 0.3em 2em;
  border: 1px solid #666;
  border-bottom: none;
  background-color: #666;
  text-decoration: none;
  border-radius: 4px 4px 0 0;
  margin: 0 0.25em 0 0;
}

.c1[aria-current="true"] {
  background: #FFFFFF;
  color: #5F7682;
  border: 1px solid #c3c3c3;
  border-bottom: none;
}

.c2 {
  background: #FFFFFF;
  border: 1px solid #c3c3c3;
  border-radius: 4px;
}

<UnwrappedTabs
  match={
    Object {
      "params": Object {
        "pageId": "3",
        "questionnaireId": "1",
        "sectionId": "2",
      },
    }
  }
>
  <div>
    <Tabs__TabsContainer>
      <nav
        className="c0"
      >
        <Tabs__Tab
          to="/questionnaire/1/2/3/design"
        >
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="c1"
            to="/questionnaire/1/2/3/design"
          >
            <Route
              path="/questionnaire/1/2/3/design"
            >
              <Link
                aria-current="true"
                className="c1 selected"
                replace={false}
                style={Object {}}
                to="/questionnaire/1/design/2/3"
              >
                <a
                  aria-current="true"
                  className="c1 selected"
                  href="/questionnaire/1/design/2/3"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Builder
                </a>
              </Link>
            </Route>
          </NavLink>
        </Tabs__Tab>
        <Tabs__Tab
          activeClassName="selected"
          isActive={[Function]}
          to="/questionnaire/1/routing/2/3"
        >
          <NavLink
            activeClassName="selected"
            ariaCurrent="true"
            className="c1"
            isActive={[Function]}
            to="/questionnaire/1/routing/2/3"
          >
            <Route
              path="/questionnaire/1/routing/2/3"
            >
              <Link
                aria-current="true"
                className="c1 selected"
                replace={false}
                style={Object {}}
                to="/questionnaire/1/routing/2/3"
              >
                <a
                  aria-current="true"
                  className="c1 selected"
                  href="/questionnaire/1/routing/2/3"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Routing
                </a>
              </Link>
            </Route>
          </NavLink>
        </Tabs__Tab>
      </nav>
    </Tabs__TabsContainer>
    <Tabs__TabsBody>
      <div
        className="c2"
      >
        Tab Content
      </div>
    </Tabs__TabsBody>
  </div>
</UnwrappedTabs>
`;
